[package]
name = "keymanager"
version = "0.3.4"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
resolver = "2"

[package.metadata.orc.release]
runtime-id = "4000000000000000000000000000000000000000000000008c5ea5e49b4bc9ac"

[package.metadata.orc.test]
runtime-id = "4000000000000000000000000000000000000000000000004a1a53dff2ae482d"

[package.metadata.fortanix-sgx]
heap-size = 134217728 # 128 MiB
stack-size = 2097152
threads = 6
debug = false

[dependencies]
# NOTE: Revision c4d5b836221ccc5aeaf81abd2d1fdec8facd571c is stable/22.2.x that includes oasis-core#5432 which is needed
#       to better handle the key manager upgrade to 0.4.x.
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", rev = "c4d5b836221ccc5aeaf81abd2d1fdec8facd571c" }
oasis-core-keymanager = { git = "https://github.com/oasisprotocol/oasis-core", rev = "c4d5b836221ccc5aeaf81abd2d1fdec8facd571c" }
