[package]
name = "keymanager"
version = "0.4.1"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
resolver = "2"

[package.metadata.orc.release]
runtime-id = "4000000000000000000000000000000000000000000000008c5ea5e49b4bc9ac"

[package.metadata.orc.test]
runtime-id = "4000000000000000000000000000000000000000000000004a1a53dff2ae482d"

[package.metadata.fortanix-sgx]
heap-size = 268435456 # 256 MiB
stack-size = 2097152
threads = 8
debug = false

[dependencies]
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v23.0.1" }
oasis-core-keymanager = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v23.0.1" }
