[package]
name = "keymanager"
version = "0.6.0-testnet"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
resolver = "2"

[package.metadata.orc.release]
runtime-id = "4000000000000000000000000000000000000000000000008c5ea5e49b4bc9ac"

[package.metadata.orc.test]
runtime-id = "4000000000000000000000000000000000000000000000004a1a53dff2ae482d"

[package.metadata.fortanix-sgx]
heap-size = 536870912 # 512 MiB
stack-size = 2097152
threads = 26
debug = false

[dependencies]
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v25.2" }
oasis-core-keymanager = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v25.2" }
